# bowling-interface

./: .gitignore  Cargo.toml  README.md
bowling_base/: Cargo.toml
bowling_base/src/: game.rs  lib.rs
bowling_base/src/game/: frame.rs  info.rs
bowling_base/src/util/: database.rs
bowling_cli/: Cargo.toml
bowling_cli/src/: main.rs
bt-base/: Cargo.toml
bt-base/src/: base.rs  lib.rs  types.rs
bt-base/src/database/: db_conn.rs  mod.rs  mongodb_conn.rs
bt-base/src/util/: error.rs  helper.rs  macros.rs
bt-cli/: Cargo.toml
bt-cli/src/: main.rs
bt-util/: Cargo.toml
bt-util/src/: database.rs  lib.rs
src/: app.rs  backend.rs  error.rs  lib.rs  loop.rs  loops.rs  main.rs
src/app/: tui.rs
src/backend/: core.rs  database.rs  util.rs
src/backend/core/: tests.rs  types.rs
src/backend/core/tests/: date.rs  frame.rs  game.rs  games.rs
src/backend/database/: db_conn.rs  mongodb_conn.rs  tests.rs
src/backend/database/tests/: mongodb_conn.rs
src/backend/util/: helper.rs
