[package]
name = "bowling_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql_common = { version = "*", default-features = true, features = ["chrono"]}
mysql = "24.0.0"
chrono = "0.4.24"
dotenv = "0.15.0"
