[package]
name = "bt-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bt-util = { path = "../bt-util" }
chrono = "0.4.31"
mysql = "24.0.0"
mysql_common = { version = "0.30.6", default-features = true, features = ["chrono"] }
