[package]
name = "bt-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
itertools = "0.12.1"
chrono = "0.4.31"
serde = { version="1.0.196", features=["derive"] }
lazy_static = "1.4.0"

[dependencies.mongodb]
version = "2.8.1"
default-features = false
features = ["tokio-sync"]
